--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="mMnage and optimize Admin services with the streamlined functionalities of the Lunch Bucket"
+      content="Manage and optimize Admin services with the streamlined functionalities of the Lunch Bucket"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/lb_logo.png" />
     <!--
